--- a/CV/main/static/main/css/style.css
+++ b/CV/main/static/main/css/style.css
@@ -1,4 +1,11 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: #141414;
+    width: 100vw;
+    height: 100vh;
+
 }
+/* .main-page{
+
+} */
