--- a/CV/main/templates/pages/index.html
+++ b/CV/main/templates/pages/index.html
@@ -5,11 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href ="{% static "main/css/style.css"%}"
+    <link rel="stylesheet" href ="{% static "main/css/style.css"%}"/>
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <p>okay this page must have snake and navbar</p>
+    <div class = "main-page">
+        <header class = "main-header"> 
+            <h1 class = "logo">Logo</h1>
+            <div class = "navigation">
+                <a>Home</a>
+                <a>Projects</a>
+                <a>About</a>
+            </div>
+            <div class = "links">
+                <a>Git</a>
+                <a>Telegram</a>
+                <a>icloud</a>
+            </div>
+        </header>
+        <div class = "main-body">
+            <h1>Welcome</h1>
+            <h3>WHERE YOUR DREAMS COME TRUE*</h3>
+        </div>
+        <footer class ="main-footer">
+            <h1>some info</h1>
+        </footer>
+    </div>
 </body>
 </html>
